--- a/package.json
+++ b/package.json
@@ -23,18 +23,18 @@
   },
   "homepage": "https://github.com/microrealestate/emailer#readme",
   "dependencies": {
-    "body-parser": "^1.18.2",
-    "ejs": "^2.5.7",
-    "express": "^4.16.3",
-    "express-winston": "^2.5.0",
-    "mailgun-js": "^0.21.0",
-    "moment": "^2.21.0",
-    "mongodb": "^3.0.4",
-    "mongoose": "^5.0.11",
-    "winston": "^2.4.1"
+    "body-parser": "1.18.3",
+    "ejs": "2.6.1",
+    "express": "4.16.4",
+    "express-winston": "2.6.0",
+    "mailgun-js": "0.22.0",
+    "moment": "2.24.0",
+    "mongodb": "3.1.13",
+    "mongoose": "5.4.13",
+    "winston": "2.4.4"
   },
   "devDependencies": {
-    "eslint": "^4.18.2",
-    "nodemon": "^1.18.4"
+    "eslint": "5.14.0",
+    "nodemon": "1.18.10"
   }
 }
