--- a/.eslintrc
+++ b/.eslintrc
@@ -1,25 +1,16 @@
 {
     "parserOptions": {
-        "ecmaVersion": 8,
+        "ecmaVersion": 2018,
         "sourceType": "module"
     },
     "rules": {
-        "indent": [
-            2,
-            4
-        ],
-        "quotes": [
-            2,
-            "single"
-        ],
-        "linebreak-style": [
-            2,
-            "unix"
-        ],
-        "semi": [
-            2,
-            "always"
-        ]
+        "for-direction": "off",
+        "getter-return": "off",
+        "indent": ["error", 4],
+        "quotes": ["error", "single"],
+        "linebreak-style": ["error", "unix"],
+        "semi": ["error", "always"],
+        "no-unused-vars": ["error", { "vars": "all", "args": "none", "ignoreRestSiblings": true }]
     },
     "env": {
         "node": true,
