--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "emailer",
   "version": "1.0.0",
   "description": "Generates and sends emails",
-  "main": "index.js",
+  "main": "./src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "dev": "nodemon -w lib -w index.js --inspect=0.0.0.0:9228 index.js"
+    "start": "node ./src/index.js",
+    "dev": "nodemon -w src --inspect=0.0.0.0:9228 ./src/index.js"
   },
   "repository": {
     "type": "git",
