--- a/package.json
+++ b/package.json
@@ -28,14 +28,15 @@
   },
   "homepage": "https://github.com/microrealestate/emailer#readme",
   "dependencies": {
-    "axios": "^0.23.0",
+    "axios": "0.24.0",
     "body-parser": "1.19.0",
     "ejs": "2.7.4",
     "express": "4.17.1",
     "express-winston": "2.6.0",
+    "jsonwebtoken": "8.5.1",
     "locale": "0.1.0",
     "mailgun-js": "0.22.0",
-    "moment": "2.24.0",
+    "moment": "2.29.1",
     "mongodb": "3.5.6",
     "mongoose": "5.12.3",
     "winston": "2.4.4"
